Add some styling

--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
   </head>
   <body>
     <div class="container">
+      <h1>Postal-Code (PLZ) Lookup for Germany</h1>
+
       <form class="search-form">
         <input type="text" class="search" placeholder="City or Postal code" />
         <ul class="suggestions">
-          <li>Search for a city</li>
-          <li>or postal code</li>
+          <li>Search for a city or a postal code</li>
         </ul>
       </form>
     </div>
