Add support for AT and CH lookup

--- a/index.html
+++ b/index.html
@@ -14,7 +14,15 @@
   </head>
   <body>
     <div class="container">
-      <h1>Postal-Code (PLZ) Lookup for Germany</h1>
+      <h1>Postal-Code (PLZ) Lookup for DE, AT, CH</h1>
+      <form action="#">
+        <label for="country">Country</label>
+        <select name="countries" id="countryList">
+          <option value="DE">DE</option>
+          <option value="AT">AT</option>
+          <option value="CH">CH</option>
+        </select>
+      </form>
 
       <form class="search-form">
         <input type="text" class="search" placeholder="City or Postal code" />
